# TechCowAi

./: .env  TECHNICAL_README.md  arweave-wallet.json  config-overrides.js  id.json  package-lock.json  package.json  tsconfig.json  upload-results.json
assets/: collection.json
assets/metadata/: 0.json  1.json  2.json  3.json  4.json
programs/cowai-nft/: Cargo.toml  program-id.json
programs/cowai-nft/src/: lib.rs
public/: index.html
scripts/: create-arweave-wallet.js  create-arweave-wallet.ts  generate_nfts.py  mint-nft.ts  upload-to-arweave.ts  upload-to-nft-storage.ts  upload-to-pinata.ts
src/: App.tsx  WalletProvider.tsx  index.css  index.tsx  styles.css
src/components/: EclipseFaucet.tsx  Header.tsx  MintCard.tsx  MintNFT.tsx
